[~] change ideograms position

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -139,35 +139,84 @@
                 </div>
                 <div class="container-fluid">
                     <div class="row text-center justify-content-center">
-                        <div class="col d-none d-lg-block">
-                            <div class="row">
-                                <div class="col">
-                                    <figure class="figure">
-                                        <img src="{{ asset('assets/politesse.png') }}" class="figure-img img-fluid" alt="Politesse">
-                                        <figcaption class="figure-caption text-white">Politesse</figcaption>
-                                    </figure>
-                                </div>
-                                <div class="col">
-                                    <figure class="figure">
-                                        <img src="{{ asset('assets/courage.png') }}" class="figure-img img-fluid" alt="Courage">
-                                        <figcaption class="figure-caption text-white">Courage</figcaption>
-                                    </figure>
-                                </div>
-                                <div class="w-100"></div>
-                                <div class="col">
-                                    <figure class="figure">
-                                        <img src="{{ asset('assets/sincerite.png') }}" class="figure-img img-fluid" alt="Sincérité">
-                                        <figcaption class="figure-caption text-white">Sincérité</figcaption>
-                                    </figure>
-                                </div>
-                                <div class="col">
-                                    <figure class="figure">
-                                        <img src="{{ asset('assets/honneur.png') }}" class="figure-img img-fluid" alt="Honneur">
-                                        <figcaption class="figure-caption text-white">Honneur</figcaption>
-                                    </figure>
-                                </div>
-                            </div>
-                        </div>
+{#                        <div class="col d-none d-lg-block">#}
+{#                            <div class="row">#}
+{#                                <div class="col">#}
+{#                                    <figure class="figure">#}
+{#                                        <img src="{{ asset('assets/politesse.png') }}" class="figure-img img-fluid" alt="Politesse">#}
+{#                                        <figcaption class="figure-caption text-white">Politesse</figcaption>#}
+{#                                    </figure>#}
+{#                                </div>#}
+{#                                <div class="col">#}
+{#                                    <figure class="figure">#}
+{#                                        <img src="{{ asset('assets/courage.png') }}" class="figure-img img-fluid" alt="Courage">#}
+{#                                        <figcaption class="figure-caption text-white">Courage</figcaption>#}
+{#                                    </figure>#}
+{#                                </div>#}
+{#                                <div class="w-100"></div>#}
+{#                                <div class="col">#}
+{#                                    <figure class="figure">#}
+{#                                        <img src="{{ asset('assets/sincerite.png') }}" class="figure-img img-fluid" alt="Sincérité">#}
+{#                                        <figcaption class="figure-caption text-white">Sincérité</figcaption>#}
+{#                                    </figure>#}
+{#                                </div>#}
+{#                                <div class="col">#}
+{#                                    <figure class="figure">#}
+{#                                        <img src="{{ asset('assets/honneur.png') }}" class="figure-img img-fluid" alt="Honneur">#}
+{#                                        <figcaption class="figure-caption text-white">Honneur</figcaption>#}
+{#                                    </figure>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="col d-none d-md-block">#}
+{#                            <h1 class="display-3 text-center" style="color: black"><strong>LILLE UNIVERSITE CLUB</strong><br/>#}
+{#                                <small class="text-white">#}
+{#                                    <a href="{{ path('judo') }}" class="text-white">JUDO</a>#}
+{#                                    <a href="{{ path('ju-jitsu') }}" class="text-white">JUJITSU</a>#}
+{#                                    <a href="{{ path('taiso') }}" class="text-white">TAISO</a>#}
+{#                                    <a href="{{ path('ne-waza') }}" class="text-white">NEWAZA</a>#}
+{#                                </small>#}
+{#                            </h1>#}
+{#                        </div>#}
+{#                        <div class="col d-md-none d-block">#}
+{#                            <h1 class="text-center" style="color: black"><strong>LILLE UNIVERSITE CLUB</strong><br/>#}
+{#                                <small class="text-white">#}
+{#                                    <a href="{{ path('judo') }}" class="text-white">JUDO</a>#}
+{#                                    <a href="{{ path('ju-jitsu') }}" class="text-white">JUJITSU</a>#}
+{#                                    <a href="{{ path('taiso') }}" class="text-white">TAISO</a>#}
+{#                                    <a href="{{ path('ne-waza') }}" class="text-white">NEWAZA</a>#}
+{#                                </small>#}
+{#                            </h1>#}
+{#                        </div>#}
+{#                        <div class="col d-none d-lg-block">#}
+{#                            <div class="row">#}
+{#                                <div class="col">#}
+{#                                    <figure class="figure">#}
+{#                                        <img src="{{ asset('assets/modestie.png') }}" class="figure-img img-fluid" alt="Modestie">#}
+{#                                        <figcaption class="figure-caption text-white">Modestie</figcaption>#}
+{#                                    </figure>#}
+{#                                </div>#}
+{#                                <div class="col">#}
+{#                                    <figure class="figure">#}
+{#                                        <img src="{{ asset('assets/respect.png') }}" class="figure-img img-fluid" alt="Respect">#}
+{#                                        <figcaption class="figure-caption text-white">Respect</figcaption>#}
+{#                                    </figure>#}
+{#                                </div>#}
+{#                                <div class="w-100"></div>#}
+{#                                <div class="col">#}
+{#                                    <figure class="figure">#}
+{#                                        <img src="{{ asset('assets/controle-de-soi.png') }}" class="figure-img img-fluid" alt="Contrôle de soi">#}
+{#                                        <figcaption class="figure-caption text-white">Contrôle de soi</figcaption>#}
+{#                                    </figure>#}
+{#                                </div>#}
+{#                                <div class="col">#}
+{#                                    <figure class="figure">#}
+{#                                        <img src="{{ asset('assets/amitie.png') }}" class="figure-img img-fluid" alt="Amitié">#}
+{#                                        <figcaption class="figure-caption text-white">Amitié</figcaption>#}
+{#                                    </figure>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
                         <div class="col d-none d-md-block">
                             <h1 class="display-3 text-center" style="color: black"><strong>LILLE UNIVERSITE CLUB</strong><br/>
                                 <small class="text-white">
@@ -188,30 +237,55 @@
                                 </small>
                             </h1>
                         </div>
+                        <div class="w-100 d-none d-md-block"></div>
                         <div class="col d-none d-lg-block">
                             <div class="row">
                                 <div class="col">
                                     <figure class="figure">
-                                        <img src="{{ asset('assets/modestie.png') }}" class="figure-img img-fluid" alt="Modestie">
-                                        <figcaption class="figure-caption text-white">Modestie</figcaption>
+                                        <img src="{{ asset('assets/politesse.png') }}" class="figure-img img-fluid" alt="Politesse idéogramme">
+                                        <figcaption class="figure-caption text-white">Politesse</figcaption>
                                     </figure>
                                 </div>
                                 <div class="col">
                                     <figure class="figure">
-                                        <img src="{{ asset('assets/respect.png') }}" class="figure-img img-fluid" alt="Respect">
-                                        <figcaption class="figure-caption text-white">Respect</figcaption>
+                                        <img src="{{ asset('assets/courage.png') }}" class="figure-img img-fluid" alt="Courage idéogramme">
+                                        <figcaption class="figure-caption text-white">Courage</figcaption>
+                                    </figure>
+                                </div>
+                                <div class="col">
+                                    <figure class="figure">
+                                        <img src="{{ asset('assets/sincerite.png') }}" class="figure-img img-fluid" alt="Sincérité idéogramme">
+                                        <figcaption class="figure-caption text-white">Sincérité</figcaption>
+                                    </figure>
+                                </div>
+                                <div class="col">
+                                    <figure class="figure">
+                                        <img src="{{ asset('assets/honneur.png') }}" class="figure-img img-fluid" alt="Honneur idéogramme">
+                                        <figcaption class="figure-caption text-white">Honneur</figcaption>
                                     </figure>
                                 </div>
                                 <div class="w-100"></div>
                                 <div class="col">
                                     <figure class="figure">
-                                        <img src="{{ asset('assets/controle-de-soi.png') }}" class="figure-img img-fluid" alt="Contrôle de soi">
+                                        <img src="{{ asset('assets/modestie.png') }}" class="figure-img img-fluid" alt="Modestie idéogramme">
+                                        <figcaption class="figure-caption text-white">Modestie</figcaption>
+                                    </figure>
+                                </div>
+                                <div class="col">
+                                    <figure class="figure">
+                                        <img src="{{ asset('assets/respect.png') }}" class="figure-img img-fluid" alt="Respect idéogramme">
+                                        <figcaption class="figure-caption text-white">Respect</figcaption>
+                                    </figure>
+                                </div>
+                                <div class="col">
+                                    <figure class="figure">
+                                        <img src="{{ asset('assets/controle-de-soi.png') }}" class="figure-img img-fluid" alt="Contrôle de soi idéogramme">
                                         <figcaption class="figure-caption text-white">Contrôle de soi</figcaption>
                                     </figure>
                                 </div>
                                 <div class="col">
                                     <figure class="figure">
-                                        <img src="{{ asset('assets/amitie.png') }}" class="figure-img img-fluid" alt="Amitié">
+                                        <img src="{{ asset('assets/amitie.png') }}" class="figure-img img-fluid" alt="Amitié idéogramme">
                                         <figcaption class="figure-caption text-white">Amitié</figcaption>
                                     </figure>
                                 </div>
