--- a/templates/club/enseignants.html.twig
+++ b/templates/club/enseignants.html.twig
@@ -7,6 +7,7 @@
         <div class="row text-center justify-content-center">
             {% for professeur in professeurs %}
                 <div class="col-lg-4">
+                    <a href="{{ path('enseignants_show', {'id': professeur.id}) }}">
                     {% if professeur.image %}
                         <img class="rounded-circle"
                              src="{{ asset('uploads/professeurs/') }}{{ professeur.image }}"
@@ -20,6 +21,7 @@
                              height="140"
                              alt="">
                     {% endif %}
+                    </a>
                     <p><strong>{{ professeur.role }}</strong></p>
                     <p>
                         {{ professeur.prenom }}
