--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,14 @@
             .border-black {
                 border-color: black !important;
             }
+            .custom-toggler .navbar-toggler-icon {
+                background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+            }
+            .custom-toggler.navbar-toggler {
+                border-color: black;
+                border-width: 5px !important;
+                background: white;
+            }
         </style>
         {% block stylesheets %}{% endblock %}
     </head>
@@ -37,7 +45,7 @@
         <div class="flex-grow-1 flex-shrink-0">
             <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background: #A93514">
                 <a class="border border-black" href="{{ path('accueil') }}" style="background: white"><img src="{{ asset('assets/luc_logo.png') }}" alt="luc_logo"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
