--- a/templates/club/bureau.html.twig
+++ b/templates/club/bureau.html.twig
@@ -21,7 +21,7 @@
                                  height="140"
                                  alt="">
                         {% endif %}
-                        <h2>{{ bureau.role.nom }}</h2>
+                        <h2>{{ bureau.role }}</h2>
                         <p>
                             {{ bureau.prenom }}
                             {{ bureau.nom }}
