--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Connexio - Lille Judo{% endblock %}
+{% block title %}Connexion - Lille Judo{% endblock %}
+
 {% block stylesheets %}
     <style>
         .form-signin {
