--- a/templates/disciplines/taiso.html.twig
+++ b/templates/disciplines/taiso.html.twig
@@ -40,6 +40,23 @@
         <div class="tab-content" id="taisoTabContent">
             <div class="tab-pane fade show active" id="histoireValeurs" role="tabpanel" aria-labelledby="histoireValeurs-tab">
                 <h3>Histoire et Valeurs</h3>
+                Taisô s’écrit en kanji 体操 où 体 signifie “le corps” et 操 “diriger/faire marcher/manœuvrer”.
+                Littéralement donc, il s’agit de faire bouger son corps. On peut traduire le mot taisô par “exercices physiques”, définition la plus générale pour cette activité.
+                Ce sont des exercices de base d'éducation du corps comme de l'esprit.
+                Il existe actuellement différentes manières de percevoir la pratique du Taïso ou Taisô (prononcer taïssô) : Pour les pratiquants d’arts martiaux, il s’agit d’une préparation physique préalable à l’activité martiale.
+                De nos jours, le taïso en tant que discipline associée à un art martial est considéré en France comme un sport. Souvent pratiqué dans un dojo, vêtu d'un judogi, ou d'un kimono plus léger, parfois simplement en tenue sportive.
+                <h3>Le Taiso: pour qui ?</h3>
+                La discipline intéresse un public de plus en plus large, sans limite d'âge, qui n'a pas forcément pratiqué de sport auparavant et qui recherche un loisir axé sur la culture et l'entretien physique.
+                C'est une alternative ludique aux nombreux sports de remise en forme comme le step ou la gymnastique volontaire puisque certains cours de Taïso représentent une approche douce des arts martiaux, sans aucun danger (pas de chute, pas de coup porté).
+                Les exercices du taïso sont très variés, pouvant se faire seul, ou en binômes :
+                <ul>
+                    <li>entretien cardio-respiratoire</li>
+                    <li>amélioration de l'endurance</li>
+                    <li>renforcement musculaire</li>
+                    <li>amélioration de l'équilibre</li>
+                    <li>amélioration des capacités psychomotrices</li>
+                    <li>amélioration de la coordination générale des membres</li>
+                </ul>
             </div>
             <div class="tab-pane fade" id="cours" role="tabpanel" aria-labelledby="cours-tab">
                 <ul class="nav nav-tabs flex-column flex-lg-row" id="coursTaisoTab" role="tablist">
