[+] logo for boutique instead of text

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -131,8 +131,10 @@
                 <div class="container">
                     <div class="row text-center justify-content-center">
                         <div class="col my-auto">
-                            <a href="{{ path('boutique') }}" style="color: black">
-                                <h4><strong>Boutique</strong></h4>
+                            <a href="{{ path('boutique') }}">
+                                <img src="{{ asset('assets/boutique-logo.png') }}"
+                                     height="100"
+                                     alt="">
                             </a>
                         </div>
                         <div class="col my-auto">
