[~] ideograms on accueil smaller - spelling issues

--- a/templates/acceuil/index.html.twig
+++ b/templates/acceuil/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Acceuil - Lille Judo{% endblock %}
+{% block title %}Accueil - Lille Judo{% endblock %}
 {% block stylesheets %}
     <style>
         .iframe-outer, .iframe-inner {
