--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,7 +54,7 @@
                         <div class="border border-little border-black">
                             <li class="nav-item border border-white">
                                 <a class="nav-link" style="color: black; background: white" href="{{ path('accueil') }}">
-                                    Acceuil
+                                    Accueil
                                 </a>
                             </li>
                         </div>
@@ -149,84 +149,6 @@
                 </div>
                 <div class="container-fluid">
                     <div class="row text-center justify-content-center">
-{#                        <div class="col d-none d-lg-block">#}
-{#                            <div class="row">#}
-{#                                <div class="col">#}
-{#                                    <figure class="figure">#}
-{#                                        <img src="{{ asset('assets/politesse.png') }}" class="figure-img img-fluid" alt="Politesse">#}
-{#                                        <figcaption class="figure-caption text-white">Politesse</figcaption>#}
-{#                                    </figure>#}
-{#                                </div>#}
-{#                                <div class="col">#}
-{#                                    <figure class="figure">#}
-{#                                        <img src="{{ asset('assets/courage.png') }}" class="figure-img img-fluid" alt="Courage">#}
-{#                                        <figcaption class="figure-caption text-white">Courage</figcaption>#}
-{#                                    </figure>#}
-{#                                </div>#}
-{#                                <div class="w-100"></div>#}
-{#                                <div class="col">#}
-{#                                    <figure class="figure">#}
-{#                                        <img src="{{ asset('assets/sincerite.png') }}" class="figure-img img-fluid" alt="Sincérité">#}
-{#                                        <figcaption class="figure-caption text-white">Sincérité</figcaption>#}
-{#                                    </figure>#}
-{#                                </div>#}
-{#                                <div class="col">#}
-{#                                    <figure class="figure">#}
-{#                                        <img src="{{ asset('assets/honneur.png') }}" class="figure-img img-fluid" alt="Honneur">#}
-{#                                        <figcaption class="figure-caption text-white">Honneur</figcaption>#}
-{#                                    </figure>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <div class="col d-none d-md-block">#}
-{#                            <h1 class="display-3 text-center" style="color: black"><strong>LILLE UNIVERSITE CLUB</strong><br/>#}
-{#                                <small class="text-white">#}
-{#                                    <a href="{{ path('judo') }}" class="text-white">JUDO</a>#}
-{#                                    <a href="{{ path('ju-jitsu') }}" class="text-white">JUJITSU</a>#}
-{#                                    <a href="{{ path('taiso') }}" class="text-white">TAISO</a>#}
-{#                                    <a href="{{ path('ne-waza') }}" class="text-white">NEWAZA</a>#}
-{#                                </small>#}
-{#                            </h1>#}
-{#                        </div>#}
-{#                        <div class="col d-md-none d-block">#}
-{#                            <h1 class="text-center" style="color: black"><strong>LILLE UNIVERSITE CLUB</strong><br/>#}
-{#                                <small class="text-white">#}
-{#                                    <a href="{{ path('judo') }}" class="text-white">JUDO</a>#}
-{#                                    <a href="{{ path('ju-jitsu') }}" class="text-white">JUJITSU</a>#}
-{#                                    <a href="{{ path('taiso') }}" class="text-white">TAISO</a>#}
-{#                                    <a href="{{ path('ne-waza') }}" class="text-white">NEWAZA</a>#}
-{#                                </small>#}
-{#                            </h1>#}
-{#                        </div>#}
-{#                        <div class="col d-none d-lg-block">#}
-{#                            <div class="row">#}
-{#                                <div class="col">#}
-{#                                    <figure class="figure">#}
-{#                                        <img src="{{ asset('assets/modestie.png') }}" class="figure-img img-fluid" alt="Modestie">#}
-{#                                        <figcaption class="figure-caption text-white">Modestie</figcaption>#}
-{#                                    </figure>#}
-{#                                </div>#}
-{#                                <div class="col">#}
-{#                                    <figure class="figure">#}
-{#                                        <img src="{{ asset('assets/respect.png') }}" class="figure-img img-fluid" alt="Respect">#}
-{#                                        <figcaption class="figure-caption text-white">Respect</figcaption>#}
-{#                                    </figure>#}
-{#                                </div>#}
-{#                                <div class="w-100"></div>#}
-{#                                <div class="col">#}
-{#                                    <figure class="figure">#}
-{#                                        <img src="{{ asset('assets/controle-de-soi.png') }}" class="figure-img img-fluid" alt="Contrôle de soi">#}
-{#                                        <figcaption class="figure-caption text-white">Contrôle de soi</figcaption>#}
-{#                                    </figure>#}
-{#                                </div>#}
-{#                                <div class="col">#}
-{#                                    <figure class="figure">#}
-{#                                        <img src="{{ asset('assets/amitie.png') }}" class="figure-img img-fluid" alt="Amitié">#}
-{#                                        <figcaption class="figure-caption text-white">Amitié</figcaption>#}
-{#                                    </figure>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        </div>#}
                         <div class="col d-none d-md-block">
                             <h1 class="display-3 text-center" style="color: black"><strong>LILLE UNIVERSITE CLUB</strong><br/>
                                 <small class="text-white">
@@ -274,7 +196,6 @@
                                         <figcaption class="figure-caption text-white">Honneur</figcaption>
                                     </figure>
                                 </div>
-                                <div class="w-100"></div>
                                 <div class="col">
                                     <figure class="figure">
                                         <img src="{{ asset('assets/modestie.png') }}" class="figure-img img-fluid" alt="Modestie idéogramme">
@@ -307,7 +228,7 @@
             {% if is_granted('ROLE_ADMIN') %}
                 <div class="text-center">
                     Si vous voyez ceci, cela veut dire que vous êtes connecté en tant qu'administrateur.<br/>
-                    <a href="{{ absolute_url('/admin') }}">Acceuil Administration </a>/
+                    <a href="{{ absolute_url('/admin') }}">Accueil Administration </a>/
                     <a href="{{ path('app_logout') }}">Se déconnecter</a>
                 </div>
             {% else %}
