[+] enabled on all entities needed

--- a/templates/documents/index.html.twig
+++ b/templates/documents/index.html.twig
@@ -130,7 +130,7 @@
                         </li>
                     {% else %}
                         <li>
-                            no records found
+                            Pas de documents actuellement
                         </li>
                     {% endfor %}
                 </ul>
