--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,6 +70,7 @@
                                     <a class="dropdown-item" href="{{ path('bureau') }}">Bureau</a>
                                     <a class="dropdown-item" href="{{ path('contact') }}">Contact</a>
                                     <a class="dropdown-item" href="{{ path('dojo') }}">Dojo</a>
+                                    <a class="dropdown-item" href="{{ path('palmares') }}">Palmarès</a>
                                 </div>
                             </li>
                         </div>
