--- a/templates/club/palmares.html.twig
+++ b/templates/club/palmares.html.twig
@@ -2,8 +2,50 @@
 
 {% block title %}Palmarès - Lille Judo{% endblock %}
 
+{% block stylesheets %}
+    <style>
+        .btn-red {
+            color: #fff;
+            background-color: #A93514;
+            border-color: #A93514;
+        }
+    </style>
+{% endblock %}
+
 {% block body %}
     <div class="container">
-        Palmarès
+        <div class="row text-center justify-content-center">
+            {% for palmares in palmaress %}
+                <div class="col">
+                    <a data-toggle="modal" data-target="#modal-{{ palmares.id }}">
+                        <img class="rounded-circle"
+                             src="https://dummyimage.com/140x140/E9ECEF/000000&text={{ palmares.annee }}"
+                             width="140"
+                             height="140"
+                             alt="">
+                    </a>
+                    <div class="modal fade" id="modal-{{ palmares.id }}" tabindex="-1" role="dialog" aria-labelledby="modal-{{ palmares.id }}" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h4 class="modal-title" id="modal-title-{{ palmares.id }}">{{ palmares.annee }}</h4>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    {{ palmares.texte|raw }}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <p></p>
+                </div>
+            {% else %}
+                <div class="col">
+                    no records founds
+                </div>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
